# Andromeda-CS2-Base

./: .gitignore  .mcp.json  Andromeda-CS2-Base.sln  CMenu.cpp  CMenu.hpp  MODULE_SYSTEM_README.md  README.md  injector-run.out.txt
.openclaude/: settings.local.json
.openclaw/: workspace-state.json
Andromeda-CS2-Base/: Andromeda-CS2-Base.vcxproj  Andromeda-CS2-Base.vcxproj.filters  build_fast.bat  watch_and_build.ps1
Andromeda-CS2-Base/Andromeda-CS2-Base/: DEV_WORKFLOW_README.md  DllLauncher.cpp  DllMain.cpp
Andromeda-CS2-Base/Andromeda-CS2-Base/AndromedaClient/: CAndromedaClient.cpp  CAndromedaClient.hpp  CAndromedaGUI.cpp  CAndromedaGUI.hpp  CLiveVariables.cpp  CLiveVariables.hpp  CModuleFileWatcher.cpp  CModuleFileWatcher.hpp  CModuleManager.cpp  CModuleManager.hpp
Andromeda-CS2-Base/Andromeda-CS2-Base/Common/: CTelemetry.hpp  LinearArena.cpp  LinearArena.hpp  MemoryEngine.cpp
Andromeda-CS2-Base/Andromeda-CS2-Base/GameClient/: CL_Bones.cpp  CL_Bones.hpp  CL_Trace.cpp  CL_VisibleCheck.cpp
Andromeda-CS2-Base/modules/aimbot_example/: CMakeLists.txt  aimbot_example.cpp
Andromeda-CS2-Base/x64/Release/: Andromeda-CS2-Base.dll.recipe
Andromeda-CS2-Logic/: Andromeda-CS2-Logic.vcxproj  Andromeda-CS2-Logic.vcxproj.filters
Andromeda-CS2-Logic/Andromeda-CS2-Logic/: DllLauncher.cpp  DllMain.cpp  DllMain.hpp
Andromeda-CS2-Logic/Andromeda-CS2-Logic/AndromedaClient/: CAndromedaClient.cpp  CAndromedaClient.hpp  CAndromedaGUI.cpp  CAndromedaGUI.hpp
Andromeda-Injector/: Andromeda-Injector.vcxproj
Andromeda-Injector/Andromeda-Injector/: CInjector.cpp  CInjector.h  Main.cpp  Main.h
Andromeda-Module-Aimbot/Andromeda-Module-Aimbot/: CAimbotModule.cpp  CAimbotModule.hpp
Andromeda-Module-Autowall/Andromeda-Module-Autowall/: CAutowallModule.cpp  CAutowallModule.hpp
x64/Release/: Andromeda-CS2-Base.exp  Andromeda-CS2-Base.lib
(+79 files in other folders)
